add asyn states wrapper function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h3>Cache operator</h3>
+<h3>Cache Operator</h3>
 
 <button (click)="heroes.push('')">Add</button>
 <button (click)="heroes.pop()">Remove</button>
@@ -8,3 +8,8 @@
 <ng-container *ngFor="let hero of heroes">
   <app-hero></app-hero>
 </ng-container>
+
+
+<h3>Async States</h3>
+
+<app-async-states></app-async-states>
