adding async states pipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,8 @@
 <h3>Async States</h3>
 
 <app-async-states></app-async-states>
+
+
+<h3>Async States Pipes</h3>
+
+<app-async-states-pipes></app-async-states-pipes>
