--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,11 @@
 <app-async-states></app-async-states>
 
 
-<h3>Async States Pipes</h3>
+<!-- <h3>Async States Pipes</h3>
 
-<app-async-states-pipes></app-async-states-pipes>
+<app-async-states-pipes></app-async-states-pipes> -->
+
+
+<h3>Reload</h3>
+
+<app-reload></app-reload>
